==> tacinunesc/VL53L0X-SD_CARD_PICO/inc/ssd1306.c <==
#include "ssd1306.h"
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <ctype.h>
#include "math.h"
#include "pico/stdlib.h"
#include "pico/binary_info.h"
#include "hardware/i2c.h"

void ssd1306_WriteCommand(uint8_t byte) {
    uint8_t buffer[2];           // Buffer contendo o registrador e o dado (Cria um buffer de 2 bytes.)
    buffer[0] = 0x00;            // Endereço do registrador, define o byte de controle como 0x00 (indica que é um comando).
    buffer[1] = byte;            // Armazena o comando a ser enviado. Dado a ser enviado 

    i2c_write_blocking(SSD1306_I2C_PORT, SSD1306_I2C_ADDR, buffer, sizeof(buffer), false); // Envia o buffer via I2C para o endereço do display.
}

void ssd1306_Init(void) { 
    
    sleep_ms(100); // Espera o display inicializar
    i2c_init(i2c1, SSD1306_I2C_CLK * 1000); // Inicializa I2C
    // Configura pinos
    gpio_set_function(I2C_SDA_PIN_OLED, GPIO_FUNC_I2C); 
    gpio_set_function(I2C_SCL_PIN_OLED, GPIO_FUNC_I2C);
    // Habilita pull-ups
    gpio_pull_up(I2C_SDA_PIN_OLED);
    gpio_pull_up(I2C_SCL_PIN_OLED);

    // Inicializa o display 
    ssd1306_SetDisplayOn(0); // Desliga o display temporariamente
    // Envia comandos de configuração
    ssd1306_WriteCommand(0x2E); // 0x2E é o comando para desativar o scroll. Garante que o scroll esteja desativado ao iniciar
    ssd1306_WriteCommand(0x20); // Modo de endereçamento
    ssd1306_WriteCommand(0x00); // 00 - Modo de endereçamento horizontal; 
                                // 01 - Modo de endereçamento vertical;
                                // 10 - Modo de endereçamento de página (RESET); 
                                // 11 - Inválido

    ssd1306_WriteCommand(0xB0); //Definir endereço inicial da página para o modo de endereçamento de página, 0-7

#ifdef SSD1306_MIRROR_VERT
    ssd1306_WriteCommand(0xC0); // Mirror vertically
#else
    ssd1306_WriteCommand(0xC8); //Set COM Output Scan Direction
#endif

    ssd1306_WriteCommand(0x00); //---set low column address
    ssd1306_WriteCommand(0x10); //---set high column address

    ssd1306_WriteCommand(0x40); //--set start line address - CHECK

    ssd1306_SetContrast(0xFF);

#ifdef SSD1306_MIRROR_HORIZ
    ssd1306_WriteCommand(0xA0); // Mirror horizontally
#else
    ssd1306_WriteCommand(0xA1); //--set segment re-map 0 to 127 - CHECK
#endif

#ifdef SSD1306_INVERSE_COLOR
    ssd1306_WriteCommand(0xA7); //--set inverse color
#else
    ssd1306_WriteCommand(0xA6); //--set normal color
#endif

// Set multiplex ratio.
#if (SSD1306_HEIGHT == 128)
    // Found in the Luma Python lib for SH1106.
    ssd1306_WriteCommand(0xFF);
#else
    ssd1306_WriteCommand(0xA8); //--set multiplex ratio(1 to 64) - CHECK
#endif

#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(0x1F); //
#elif (SSD1306_HEIGHT == 64)
    ssd1306_WriteCommand(0x3F); //
#elif (SSD1306_HEIGHT == 128)
    ssd1306_WriteCommand(0x3F); // Seems to work for 128px high displays too.
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(0xA4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content

    ssd1306_WriteCommand(0xD3); //-set display offset - CHECK
    ssd1306_WriteCommand(0x00); //-not offset

    ssd1306_WriteCommand(0xD5); //--set display clock divide ratio/oscillator frequency
    ssd1306_WriteCommand(0xF0); //--set divide ratio

    ssd1306_WriteCommand(0xD9); //--set pre-charge period
    ssd1306_WriteCommand(0x22); //

    ssd1306_WriteCommand(0xDA); //--set com pins hardware configuration - CHECK
#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(0x02);
#elif (SSD1306_HEIGHT == 64)
    ssd1306_WriteCommand(0x12);
#elif (SSD1306_HEIGHT == 128)
    ssd1306_WriteCommand(0x12);
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(0xDB); //--set vcomh
    ssd1306_WriteCommand(0x20); //0x20,0.77xVcc

    ssd1306_WriteCommand(0x8D); //--set DC-DC enable
    ssd1306_WriteCommand(0x14); //
    ssd1306_SetDisplayOn(1); //--turn on SSD1306 panel

    // Clear screen
    ssd1306_Fill(Black);
    
    // Flush buffer to screen
    ssd1306_UpdateScreen();
    
    // Set default values for screen object
    SSD1306.CurrentX = 0;
    SSD1306.CurrentY = 0;
    
    SSD1306.Initialized = 1;
}
